Bug 204281 - can not send a file via jabber
Summary: can not send a file via jabber
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Jabber Plugin (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 212992 215388 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-08-18 15:13 UTC by Yura
Modified: 2010-01-29 06:17 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch for jabberbasecontact.cpp (521 bytes, patch)
2009-12-05 20:40 UTC, Anton Revunov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yura 2009-08-18 15:13:11 UTC
Version:           0.70.90 (using KDE 4.3.0)
OS:                Linux
Installed from:    SuSE RPMs

I can not send a file via jabber. My xml console

<iq from="mitykova@jabber.ru" type="error" to="mitykov@jabber.ru/Kopete" id="aacea" >
<si xmlns="http://jabber.org/protocol/si" profile="http://jabber.org/protocol/si/profile/file-transfer" id="s5b_44cfeada542fb86" >
<file xmlns="http://jabber.org/protocol/si/profile/file-transfer" size="59153" name="123 (1).jpg" >
<preview xmlns="http://kopete.kde.org/protocol/file-preview">iVBORw0KGgoAAAA...SUVORK5CYII=</preview>
<range/>
</file>
<feature xmlns="http://jabber.org/protocol/feature-neg">
<x xmlns="jabber:x:data" type="form" >
<field type="list-single" var="stream-method" >
<option>
<value>http://jabber.org/protocol/bytestreams</value>
</option>
</field>
</x>
</feature>
</si>
<error type="cancel" code="503" >
<service-unavailable xmlns="urn:ietf:params:xml:ns:xmpp-stanzas"/>
</error>
</iq>

Another jabber clients, like a gajim, work fine.
Comment 1 Detlev Casanova 2009-08-19 18:17:49 UTC
What is the other peer's client ?
Could you post the whole XML output from the moment you press "Send" ?

The "service-unavailable" error means that the other peer's client does not understand the stanza.
Comment 2 Yura 2009-08-20 01:15:38 UTC
Other peer's clients is kopete, miramda or gajim.
XML console when i press "Send"

<iq type="set" to="virus@jabber.org" id="aacda" >
<si xmlns="http://jabber.org/protocol/si" profile="http://jabber.org/protocol/si/profile/file-transfer" id="s5b_447e87aa9df3b9f1" >
<file xmlns="http://jabber.org/protocol/si/profile/file-transfer" size="535473" name="Александр Сергеевич Пушкин. Поэмы, сказки.txt" >
<range/>
</file>
<feature xmlns="http://jabber.org/protocol/feature-neg">
<x xmlns="jabber:x:data" type="form" >
<field type="list-single" var="stream-method" >
<option>
<value>http://jabber.org/protocol/bytestreams</value>
</option>
</field>
</x>
</feature>
</si>
</iq>

<iq from="virus@jabber.org" type="error" to="mitykov@jabber.ru/Kopete" id="aacda" >
<si xmlns="http://jabber.org/protocol/si" profile="http://jabber.org/protocol/si/profile/file-transfer" id="s5b_447e87aa9df3b9f1" >
<file xmlns="http://jabber.org/protocol/si/profile/file-transfer" size="535473" name="Александр Сергеевич Пушкин. Поэмы, сказки.txt" >
<range/>
</file>
<feature xmlns="http://jabber.org/protocol/feature-neg">
<x xmlns="jabber:x:data" type="form" >
<field type="list-single" var="stream-method" >
<option>
<value>http://jabber.org/protocol/bytestreams</value>
</option>
</field>
</x>
</feature>
</si>
<error type="cancel" code="503" >
<service-unavailable xmlns="urn:ietf:params:xml:ns:xmpp-stanzas"/>
</error>
</iq>
Comment 3 Yura 2009-10-08 00:57:37 UTC
What about this bug? I update my kde to 4.3.2 (kopete 0.80.2) version but I still can not send files via jabber. I changed serever on jabbim.cz. Proxy server specified in the settings for file transfer, proxy jabbim.cz. This is not helpful for.
Comment 4 Anton Revunov 2009-12-05 20:40:45 UTC
Created attachment 38855 [details]
Patch for jabberbasecontact.cpp

I have the same trouble since KDE 4.3.0. I made patch, it's good for me.
Comment 5 Yura 2009-12-06 05:50:43 UTC
Fine! It's work! Thank you very much.
Comment 6 Detlev Casanova 2009-12-14 01:24:18 UTC
SVN commit 1062167 by casanova:

Return the value instead of just getting it.
BUG:204281


 M  +1 -1      jabberbasecontact.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1062167
Comment 7 Andreas Hartmetz 2009-12-14 14:12:37 UTC
SVN commit 1062363 by ahartmetz:

Revert last commit, the code didn't even compile. I wonder how it could have
fixed a bug then...
CCBUG: 204281


 M  +1 -1      jabberbasecontact.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1062363
Comment 8 Adam Russell 2009-12-14 19:47:31 UTC
I haven't tried compiling it (and I don't have commit privs), but Casanova didn't include the .full() that Revunov added to the end of the line.  Perhaps that's the problem.  Also, someone should reopen the bug if the "fix" was reverted.
Comment 9 Detlev Casanova 2009-12-14 20:22:27 UTC
Yes, my mistake, it will teach me always using copy/paste's
Comment 10 Roman Jarosz 2009-12-27 11:12:05 UTC
SVN commit 1066524 by rjarosz:

WithResource doesn't change object so we have to assign it to something.
Me wonders how many other problems this may have caused.

Part of the patch by Anton Revunov, thanks!
BUG: 204281



 M  +2 -2      jabberbasecontact.cpp  
 M  +3 -3      jabberchatsession.cpp  
 M  +1 -1      jabbercontact.cpp  
 M  +1 -1      jabberresource.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1066524
Comment 11 Yura 2010-01-02 02:56:38 UTC
[ 70%] Building CXX object kopete/protocols/jabber/CMakeFiles/kopete_jabber.dir/jabbercontact.o
/home/jura/Download/kdenetwork-4.3.4/kopete/protocols/jabber/jabbercontact.cpp: In member function ‘virtual void JabberContact::handleIncomingMessage(const XMPP::Message&)’:
/home/jura/Download/kdenetwork-4.3.4/kopete/protocols/jabber/jabbercontact.cpp:361: error: ‘class JabberAccount’ has no member named ‘mergeMessages’
/home/jura/Download/kdenetwork-4.3.4/kopete/protocols/jabber/jabbercontact.cpp:449: error: ‘class JabberAccount’ has no member named ‘mergeMessages’
/home/jura/Download/kdenetwork-4.3.4/kopete/protocols/jabber/jabbercontact.cpp:476: error: ‘class JabberAccount’ has no member named ‘mergeMessages’
make[2]: *** [kopete/protocols/jabber/CMakeFiles/kopete_jabber.dir/jabbercontact.o] Ошибка 1
make[1]: *** [kopete/protocols/jabber/CMakeFiles/kopete_jabber.dir/all] Ошибка 2
make: *** [all] Ошибка 2
Comment 12 Roman Jarosz 2010-01-02 11:02:14 UTC
Yura how did you applied the patch to Kopet from KDE 4.3 ... I don't see any mergeMessages in my commit?
Comment 13 Yura 2010-01-02 13:58:57 UTC
I download and rewrite this files http://websvn.kde.org/?view=rev&revision=1066524
Then...
cd kdenetwork
cmake -DCMAKE_INSTALL_PREFIX=`kde4-config --prefix`
cd kdenetwork/kopete
make
Comment 14 Roman Jarosz 2010-01-03 01:51:59 UTC
*** Bug 215388 has been marked as a duplicate of this bug. ***
Comment 15 Roman Jarosz 2010-01-03 01:58:20 UTC
*** Bug 212992 has been marked as a duplicate of this bug. ***
Comment 16 Roman Jarosz 2010-01-03 02:15:33 UTC
You cannot use files from trunk with Kopete from KDE 4.3, you have to apply only changes made to the 4 files or use whole Kopete from trunk (but you also will need kdelibs from trunk)
Comment 17 Vovochka 2010-01-29 05:42:47 UTC
It's kde 4.4 rc2
kopete 1.0.0

But i still can not transfer or receive files via jabber. When this functionality will work?
Comment 18 Yura 2010-01-29 06:17:24 UTC
Yes. This work for me. Kopete 1.0.0 kde 4.4 RC2