WithResource doesn't change object so we have to assign it to something. Me wonders how many other problems this may have caused.

Part of the patch by Anton Revunov, thanks!
BUG: 204281


svn path=/trunk/KDE/kdenetwork/kopete/; revision=1066524