protocols/jabber/jabberchatsession.cpp
@@ -154,7 +154,7 @@ void JabberChatSession::slotUpdateDisplayName ()
 	XMPP::Jid jid = static_cast<JabberBaseContact*>(chatMembers.first())->rosterItem().jid();
 
 	if ( !mResource.isEmpty () )
-		jid.withResource ( mResource );
+		jid = jid.withResource ( mResource );
 
 	QString statusText = i18nc("a contact's online status in parenthesis.", " (%1)",
 							  chatMembers.first()->onlineStatus().description() );
@@ -292,7 +292,7 @@ void JabberChatSession::sendNotification( Event event )
 
 		// set resource properly if it has been selected already
 		if ( !resource().isEmpty () )
-			toJid.withResource ( resource () );
+			toJid = toJid.withResource ( resource () );
 
 		XMPP::Message message;
 
@@ -352,7 +352,7 @@ void JabberChatSession::slotMessageSent ( Kopete::Message &message, Kopete::Chat
 		XMPP::Jid toJid = recipient->rosterItem().jid();
 
 		if( !resource().isEmpty () )
-			toJid.withResource ( resource() );
+			toJid = toJid.withResource ( resource() );
 
 		jabberMessage.setTo ( toJid );
 
